--- a/SocialWeave/Views/Search/PageOfSearch.cshtml
+++ b/SocialWeave/Views/Search/PageOfSearch.cshtml
@@ -93,7 +93,7 @@
     <div class="search-box">
         <form asp-action="Search" asp-controller="Search" method="GET">
             <input type="text" name="query" class="search-input bg-light text-dark" placeholder="Enter your search query...">
-            <button type="submit" class="search-button bg-black text-primary"><i class="bi bi-search"></i></button>
+            <button type="submit" class="search-button bg-black text-light"><i class="bi bi-search"></i></button>
         </form>
     </div>
     @if (Model != null)
