--- a/SocialWeave/Views/User/Login.cshtml
+++ b/SocialWeave/Views/User/Login.cshtml
@@ -64,27 +64,26 @@
         color: #fff;
     }
 
-    .custom-border {
-        width: 100%;
-        height: 2px;
-        background: linear-gradient(to right, #000080, #4B0082);
-        margin: 90px 0;
-    }
-
     .post-header {
         display: flex;
         align-items: center;
         justify-content: space-between;
     }
- 
+
+    .custom-border {
+        width: 100%;
+        height: 2px;
+        background: linear-gradient(to right, #FFA500, #FF4500);
+        margin: 40px 0;
+    }
+
     .info-text {
-        background: linear-gradient(to right, #000080, #4B0082);
+        background: linear-gradient(to right, #FFA500, #FF4500);
         -webkit-background-clip: text;
         color: transparent;
         padding: 10px 20px;
         margin-bottom: 20px;
     }
-
 </style>
 
 @section Scripts {
