--- a/SocialWeave/Views/User/ShowAdmired.cshtml
+++ b/SocialWeave/Views/User/ShowAdmired.cshtml
@@ -9,15 +9,8 @@
 }
 
 <style>
-    .custom-border {
-        width: 100%;
-        height: 2px;
-        background: linear-gradient(to right, #000080, #4B0082);
-        margin: 90px 0;
-    }
-
     .user {
-        border: 1px solid #ccc;
+        border: 1px solid #FF4500;
         border-radius: 8px;
         padding-top: 20px;
         padding-bottom: 20px;
@@ -26,8 +19,15 @@
         margin-bottom: 80px;
     }
 
+    .custom-border {
+        width: 100%;
+        height: 2px;
+        background: linear-gradient(to right, #FFA500, #FF4500);
+        margin: 40px 0;
+    }
+
     .info-text {
-        background: linear-gradient(to right, #000080, #4B0082);
+        background: linear-gradient(to right, #FFA500, #FF4500);
         -webkit-background-clip: text;
         color: transparent;
         padding: 10px 20px;
