--- a/SocialWeave/wwwroot/css/site.css
+++ b/SocialWeave/wwwroot/css/site.css
@@ -14,6 +14,10 @@ body {
     }
 }
 
+.orange-text {
+    color: #FFA500;
+}
+
 .purple-gradient {
     background: linear-gradient(180deg, #b200ff, #0000);
 }
