--- a/SocialWeave/Views/Home/About.cshtml
+++ b/SocialWeave/Views/Home/About.cshtml
@@ -21,14 +21,16 @@
     .custom-border {
         width: 100%;
         height: 2px;
-        background: linear-gradient(to right, #000080, #4B0082);
+        background: linear-gradient(to right, #FFA500, #FF4500);
+        margin: 40px 0;
     }
 
     .info-text {
-        background: linear-gradient(to right, #000080, #4B0082);
+        background: linear-gradient(to right, #FFA500, #FF4500);
         -webkit-background-clip: text;
         color: transparent;
         padding: 10px 20px;
         margin-bottom: 20px;
     }
+
 </style>
