--- a/SocialWeave/Views/Notification/ShowNotifications.cshtml
+++ b/SocialWeave/Views/Notification/ShowNotifications.cshtml
@@ -19,21 +19,6 @@
         background-color: #e0e0e0;
     }
 
-    .custom-border {
-        width: 100%;
-        height: 2px;
-        background: linear-gradient(to right, #000080, #4B0082);
-        margin: 40px 0;
-    }
-
-    .info-text {
-        background: linear-gradient(to right, #000080, #4B0082);
-        -webkit-background-clip: text;
-        color: transparent;
-        padding: 10px 20px;
-        margin-bottom: 20px;
-    }
-
     .text-start {
         text-align: start;
     }
@@ -47,9 +32,34 @@
     }
 
     .post {
-        border: 1px solid #ccc;
+        border: 1px solid #FF4500;
         border-radius: 8px;
         padding: 20px;
+        margin-bottom: 80px;
+    }
+
+    .custom-border {
+        width: 100%;
+        height: 2px;
+        background: linear-gradient(to right, #FFA500, #FF4500);
+        margin: 40px 0;
+    }
+
+    .info-text {
+        background: linear-gradient(to right, #FFA500, #FF4500);
+        -webkit-background-clip: text;
+        color: transparent;
+        padding: 10px 20px;
+        margin-bottom: 20px;
+    }
+
+    .body {
+        border: 1px solid #FF4500;
+        border-radius: 8px;
+        padding-top: 20px;
+        padding-bottom: 20px;
+        padding-left: 5px;
+        padding-right: 5px;
         margin-bottom: 80px;
     }
 
