--- a/SocialWeave/Views/Post/ChoosePostType.cshtml
+++ b/SocialWeave/Views/Post/ChoosePostType.cshtml
@@ -3,16 +3,23 @@
 }
 
 <style>
+    .custom-border {
+        width: 100%;
+        height: 2px;
+        background: linear-gradient(to right, #FFA500, #FF4500);
+        margin: 40px 0;
+    }
+
     .info-text {
-       background: linear-gradient(to right, #000080, #4B0082);
-       -webkit-background-clip: text;
-       color: transparent;
-       padding: 10px 20px;
-       margin-bottom: 20px;
-       }
+        background: linear-gradient(to right, #FFA500, #FF4500);
+        -webkit-background-clip: text;
+        color: transparent;
+        padding: 10px 20px;
+        margin-bottom: 20px;
+    }
 
     .body {
-        border: 1px solid #ccc;
+        border: 1px solid #FF4500;
         border-radius: 8px;
         padding-top: 20px;
         padding-bottom: 20px;
