--- a/SocialWeave/Views/Post/CreateComment.cshtml
+++ b/SocialWeave/Views/Post/CreateComment.cshtml
@@ -13,7 +13,7 @@
     .card {
         border: none;
         border-radius: 15px;
-        background: linear-gradient(135deg, #000080, #4B0082);
+        background: linear-gradient(135deg, #FFA500, #FF4500);
         box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
     }
 
@@ -40,16 +40,16 @@
         font-size: 18px;
     }
 
-        .btn-primary:focus {
-            box-shadow: none;
-        }
+    .btn-primary:focus {
+        box-shadow: none;
+     }
 
     .text-danger {
         color: #FF5252;
     }
 
     .body {
-        border: 1px solid #ccc;
+        border: 1px solid #FF4500;
         border-radius: 8px;
         padding-top: 20px;
         padding-bottom: 20px;
