--- a/SocialWeave/Views/Post/CreatePost.cshtml
+++ b/SocialWeave/Views/Post/CreatePost.cshtml
@@ -25,16 +25,9 @@
         margin-bottom: 20px;
     }
 
-    .custom-border {
-        width: 100%;
-        height: 2px;
-        background: linear-gradient(to right, #000080, #4B0082);
-        margin: 40px 0;
+    .form-control:focus {
+        background-color: rgba(255, 255, 255, 0.3);
     }
-
-        .form-control:focus {
-            background-color: rgba(255, 255, 255, 0.3);
-        }
 
     .btn-primary {
         border: none;
@@ -56,8 +49,15 @@
         color: #fff;
     }
 
+    .custom-border {
+        width: 100%;
+        height: 2px;
+        background: linear-gradient(to right, #FFA500, #FF4500);
+        margin: 40px 0;
+    }
+
     .info-text {
-        background: linear-gradient(to right, #000080, #4B0082);
+        background: linear-gradient(to right, #FFA500, #FF4500);
         -webkit-background-clip: text;
         color: transparent;
         padding: 10px 20px;
@@ -65,7 +65,7 @@
     }
 
     .body {
-        border: 1px solid #ccc;
+        border: 1px solid #FF4500;
         border-radius: 8px;
         padding-top: 20px;
         padding-bottom: 20px;
