--- a/SocialWeave/Views/Post/CreatePostImage.cshtml
+++ b/SocialWeave/Views/Post/CreatePostImage.cshtml
@@ -9,7 +9,7 @@
     }
 
     .post {
-        border: 1px solid #ccc;
+        border: 1px solid #FF4500;
         border-radius: 8px;
         padding: 20px;
         margin-bottom: 0px;
@@ -58,10 +58,27 @@
     .custom-border {
         width: 100%;
         height: 2px;
-        background: linear-gradient(to right, #000080, #4B0082);
+        background: linear-gradient(to right, #FFA500, #FF4500);
         margin: 40px 0;
     }
 
+    .info-text {
+        background: linear-gradient(to right, #FFA500, #FF4500);
+        -webkit-background-clip: text;
+        color: transparent;
+        padding: 10px 20px;
+        margin-bottom: 20px;
+    }
+
+    .body {
+        border: 1px solid #FF4500;
+        border-radius: 8px;
+        padding-top: 20px;
+        padding-bottom: 20px;
+        padding-left: 5px;
+        padding-right: 5px;
+        margin-bottom: 80px;
+    }
     .btn-primary:hover {
         background-color: #7B1FA2;
     }
@@ -83,23 +100,6 @@
         margin-top: 10px;
     }
 
-    .body {
-        border: 1px solid #ccc;
-        border-radius: 8px;
-        padding-top: 20px;
-        padding-bottom: 20px;
-        padding-left: 5px;
-        padding-right: 5px;
-        margin-bottom: 80px;
-    }
-
-    .info-text {
-        background: linear-gradient(to right, #000080, #4B0082);
-        -webkit-background-clip: text;
-        color: transparent;
-        padding: 10px 20px;
-        margin-bottom: 20px;
-    }
 </style>
 
 @if (TempData["CreateError"] != null)
