--- a/SocialWeave/Views/Post/Edit.cshtml
+++ b/SocialWeave/Views/Post/Edit.cshtml
@@ -248,23 +248,8 @@ else
 }
 
 <style>
-    .custom-border {
-        width: 100%;
-        height: 2px;
-        background: linear-gradient(to right, #000080, #4B0082);
-        margin: 40px 0;
-    }
-
-    .info-text {
-        background: linear-gradient(to right, #000080, #4B0082);
-        -webkit-background-clip: text;
-        color: transparent;
-        padding: 10px 20px;
-        margin-bottom: 20px;
-    }
-
     .post {
-        border: 1px solid #ccc;
+        border: 1px solid #FF4500;
         border-radius: 8px;
         padding: 20px;
         margin-bottom: 0px;
@@ -283,6 +268,31 @@ else
         padding: 10px 20px;
         cursor: pointer;
         transition: background-color 0.3s ease;
+    }
+
+    .custom-border {
+        width: 100%;
+        height: 2px;
+        background: linear-gradient(to right, #FFA500, #FF4500);
+        margin: 40px 0;
+    }
+
+    .info-text {
+        background: linear-gradient(to right, #FFA500, #FF4500);
+        -webkit-background-clip: text;
+        color: transparent;
+        padding: 10px 20px;
+        margin-bottom: 20px;
+    }
+
+    .body {
+        border: 1px solid #FF4500;
+        border-radius: 8px;
+        padding-top: 20px;
+        padding-bottom: 20px;
+        padding-left: 5px;
+        padding-right: 5px;
+        margin-bottom: 80px;
     }
 </style>
 
