--- a/SocialWeave/Views/User/UserPage.cshtml
+++ b/SocialWeave/Views/User/UserPage.cshtml
@@ -444,20 +444,6 @@
 }
 
 <style>
-    .custom-border {
-        width: 100%;
-        height: 2px;
-        background: linear-gradient(to right, #000080, #4B0082);
-        margin: 90px 0;
-    }
-
-    .post {
-        border: 1px solid #ccc;
-        border-radius: 8px;
-        padding: 20px;
-        margin-bottom: 80px;
-    }
-
     .post-header {
         display: flex;
         align-items: center;
@@ -487,12 +473,26 @@
         text-align: center;
     }
 
+    .custom-border {
+        width: 100%;
+        height: 2px;
+        background: linear-gradient(to right, #FFA500, #FF4500);
+        margin: 40px 0;
+    }
+
     .info-text {
-        background: linear-gradient(to right, #000080, #4B0082);
+        background: linear-gradient(to right, #FFA500, #FF4500);
         -webkit-background-clip: text;
         color: transparent;
         padding: 10px 20px;
         margin-bottom: 20px;
+    }
+
+    .post {
+        border: 1px solid #FF4500;
+        border-radius: 8px;
+        padding: 20px;
+        margin-bottom: 0px;
     }
 
     .description-birthdate-container {
