--- a/SocialWeave/Views/Post/CreatePost.cshtml
+++ b/SocialWeave/Views/Post/CreatePost.cshtml
@@ -6,7 +6,7 @@
 <style>
 
     .post {
-        border: 1px solid #ccc;
+        border: 1px solid #FF4500;
         border-radius: 8px;
         padding: 20px;
         margin-bottom: 0px;
